tests/invalid_nodepend/unicode_2.m
%---------------------------------------------------------------------------%
% vim: ts=4 sw=4 et ft=mercury
%---------------------------------------------------------------------------%

:- module unicode2.

:- interface.

:- type '\UFFFFFFFF' == int.
